console error fix,scrollbar and glow disable

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+/* 
+    Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+  }
+}
 
 html {
   scroll-behavior: smooth;
@@ -202,35 +216,39 @@ html {
   overflow: hidden;
 }
 
-.promise_animate-glow:after {
-  content: "";
-  top: 150px;
-  left: 0;
-  width: 140%;
-  height: 30%;
-  transform: translateX(90%);
-  position: absolute;
-  z-index: 5;
-  animation: bgSlide 3s infinite;
-  animation-direction: reverse;
-  box-shadow: 40px #eee;
-  background-image: linear-gradient(
-    -45deg,
-    rgba(255, 255, 255, 0.2) 0%,
-    rgba(255, 255, 255, 0.681) 50%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
-  transform: translate(100%, -50%) rotate(45deg);
+@media screen and (min-width: 768px) {
+  .promise_animate-glow:after {
+    content: "";
+    top: 150px;
+    left: 0;
+    width: 140%;
+    height: 30%;
+    transform: translateX(90%);
+    position: absolute;
+    z-index: 5;
+    animation: bgSlide 3s infinite;
+    animation-direction: reverse;
+    box-shadow: 40px #eee;
+    background-image: linear-gradient(
+      -45deg,
+      rgba(255, 255, 255, 0.2) 0%,
+      rgba(255, 255, 255, 0.681) 50%,
+      rgba(255, 255, 255, 0.2) 100%
+    );
+    transform: translate(100%, -50%) rotate(45deg);
+  }
+  
+  @keyframes bgSlide {
+    0% {
+      transform: translate(-100%) rotate(45deg);
+    }
+    100% {
+      transform: translate(100%) rotate(45deg);
+    }
+  }
 }
 
-@keyframes bgSlide {
-  0% {
-    transform: translate(-100%) rotate(45deg);
-  }
-  100% {
-    transform: translate(100%) rotate(45deg);
-  }
-}
+
 
 /* footer css */
 .avatar {
